release-data/changelogs/8.0/plugins/openscap.adoc
= Changelogs for Rudder plugin openscap 8.0.\* versions

== openscap-8.0.10-2.1 (2024-07-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.9-2.1 (2024-06-03)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: User with node read should be able to see open scap report
    (https://issues.rudder.io/issues/24868[#24868])
* Fixed: OpenSCAP technique doesn't show up in GUI after OpenSCAP plugin installation
    (https://issues.rudder.io/issues/24781[#24781])

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.8-2.1 (2024-04-25)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.7-2.1 (2024-04-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.6-2.1 (2024-02-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.5-2.1 (2024-02-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Update antisamy for security issue (CVE-2023-43643)
    (https://issues.rudder.io/issues/24003[#24003])
* Fixed: The technique is no longer working on Rudder 8.0+
    (https://issues.rudder.io/issues/23924[#23924])

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.4-2.1 (2023-12-14)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.3-2.1 (2023-11-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.2-2.1 (2023-11-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.1-2.1 (2023-10-30)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Remove OpenSCAP page from plugin
    (https://issues.rudder.io/issues/23646[#23646])

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0-2.1 (2023-10-18)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.rc2-2.1 (2023-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.rc1-2.1 (2023-10-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.beta3-2.1 (2023-10-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.beta2-2.1 (2023-09-15)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Add up to date batik-css dependency to fix CVE-2022-44729
    (https://issues.rudder.io/issues/23423[#23423])

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.beta1-2.1 (2023-09-07)

=== Changes


==== UI - UX

* Use consistent fonts in Rudder interface - plugins
    (https://issues.rudder.io/issues/23270[#23270])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.0.0.alpha1-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

