release-data/changelogs/8.1/plugins/openscap.adoc
= Changelogs for Rudder plugin openscap 8.1.\* versions

== openscap-8.1.12-2.2 (2025-02-27)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.11-2.2 (2025-01-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.10-2.2 (2024-12-16)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Openscap report cannot open in iframe since CSRF headers
    (https://issues.rudder.io/issues/26033[#26033])

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.10-2.1 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.9-2.1 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.8-2.1 (2024-11-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.7-2.1 (2024-10-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.6-2.1 (2024-08-01)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: OpenSCAP test fails when there is a '@' '%40' in path
    (https://issues.rudder.io/issues/25193[#25193])
* Fixed: OpenSCAP plugin output displays on *all* node tabs
    (https://issues.rudder.io/issues/25075[#25075])

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.5-2.1 (2024-07-01)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.4-2.1 (2024-06-20)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.3-2.1 (2024-06-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: User with node read should be able to see open scap report
    (https://issues.rudder.io/issues/24868[#24868])
* Fixed: OpenSCAP technique doesn't show up in GUI after OpenSCAP plugin installation
    (https://issues.rudder.io/issues/24781[#24781])

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.2-2.1 (2024-04-30)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.1-2.1 (2024-04-25)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.1-2.1 (2024-04-25)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.0-2.1 (2024-04-11)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.0.rc1-2.1 (2024-04-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.0.beta2-2.1 (2024-03-22)

=== Changes


==== Packaging

* Add description field to plugin metadata
    (https://issues.rudder.io/issues/24477[#24477])

=== Bug fixes

==== Web - UI & UX

* Fixed: OpenSCAP tabs is not aligned in page node
    (https://issues.rudder.io/issues/24357[#24357])

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.0.beta1-2.1 (2024-03-04)

=== Changes


==== UI - UX

* Integrate Sass with front-end development tools
    (https://issues.rudder.io/issues/24050[#24050])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== openscap-8.1.0.alpha1-2.1 (2024-01-19)

=== Changes


=== Bug fixes

==== UI - UX

* Fixed: Fix UI problems following the Bootstrap 5 upgrade
    (https://issues.rudder.io/issues/23928[#23928])

==== Miscellaneous

* Fixed: Update antisamy for security issue (CVE-2023-43643)
    (https://issues.rudder.io/issues/24003[#24003])
* Fixed: The technique is no longer working on Rudder 8.0+
    (https://issues.rudder.io/issues/23924[#23924])
* Fixed: Update rudder-plugins dependencies
    (https://issues.rudder.io/issues/23762[#23762])

=== Release notes

This is a bug fix release in the 8.1 series and therefore all installations of 8.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

